--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
           </div>
           <div class="weather-forecast" id="forecast"></div>
         </div>
-        <small>
+        <footer>
           <a
             href="https://github.com/CBID2/Weather-App/tree/main"
             target="_blank"
             >Open-source code</a
           >
-          by Matt Delac
-        </small>
+          by Christine Belzie
+        </footer>
       </div>
     </div>
     <script src="src/app.js"></script>
