Added forecast section

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
           <a
             href="https://github.com/CBID2/Weather-App/tree/main"
             target="_blank"
-            >Open-source code</a
-          >
+            >Open-source code</a>
           by Christine Belzie
         </footer>
       </div>
